Fixed a spacing issue in the CSS

--- a/content-en/src/site/resources/css/html.css
+++ b/content-en/src/site/resources/css/html.css
@@ -165,7 +165,7 @@ table[summary^="Navigation footer"], table[summary^="Navigation header"] {
     border-spacing: 0;
     border: 1px black;
     empty-cells: hide;    
-    margin-top: 0px;
+    margin-top: 30px;
     width: 100%;
 }
 
